--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -33,6 +33,10 @@
         <%= f.text_field :image_url, class: 'form-control input-lg', placeholder: "URL de Imagen" %>
       </div>
 
+      <div class="form-group">
+        <%= f.number_field :image_url, class: 'form-control input-lg', placeholder: "price per night" %>
+      </div>
+
       <div class="actions text-right">
         <%= f.submit @room.new_record? ? "Crear Habitación" : "Editar Habitación", class: "btn btn-primary btn-lg btn-block" %>
       </div>
