correción error en el input de price_per_night

--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -34,7 +34,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.number_field :image_url, class: 'form-control input-lg', placeholder: "price per night" %>
+        <%= f.number_field :price_per_night, class: 'form-control input-lg', placeholder: "price per night" %>
       </div>
 
       <div class="actions text-right">
