--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -34,7 +34,8 @@
       </div>
 
       <div class="form-group">
-        <%= f.number_field :price_per_night, class: 'form-control input-lg', placeholder: "price per night", step: :any %>
+        <%= f.label :price_per_night, "Precio/noche" %>
+        <%= f.number_field :price_per_night, class: 'form-control input-lg', placeholder: "price per night" %>
       </div>
 
       <div class="actions text-right">
